Fixes positioning on carousel arrows on mobile

--- a/app/ContentTypes/_carousel.scss
+++ b/app/ContentTypes/_carousel.scss
@@ -128,8 +128,7 @@
 .firstheight img {
     display: none;
 }
-
-
+@media screen and (max-width: 768px) { .carousel-control { position: absolute; margin-top: 13%; opacity: 0.8; } }
 @media only screen and (min-width: 768px) {
 
     .carousel-indicators {
